--- a/main.tex
+++ b/main.tex
@@ -244,43 +244,43 @@ Now we have to find m,n and p.
 We can find that by using the formula for magnitude of a vector:\\ 
 {\vspace{0.4cm}}
 Magnitude of Vector
-$$||\vec{AE_3}||=\sqrt{\vec{AE_3}^{\top}.\vec{AE_3}}$$
+$${AE_3=\sqrt{{(\vec{E_3}-\vec A)}^{\top}.{(\vec{E_3}-\vec A)}}$$
 
 \begin{align}
-	\vec{AE_3}&=\myvec{-0.136-1 \\ 
+	\vec{E_3}-\vec A&=\myvec{-0.136-1 \\ 
        -2.136+1}\\
-\implies	||\vec{AE_3}||&=\sqrt{\myvec{-1.136 &
+\implies	{AE_3}&=\sqrt{\myvec{-1.136 &
        -1.136}
        \myvec{ -1.136\\ 
        -1.136}} \\
-\implies	||\vec{AE_3}||&= 1.607 
+\implies	{AE_3}&= 1.607 
 \end{align}
 
 
 \begin{align}
-	\vec{AF_3}&=\myvec{0.066-1 \\ 
+	\vec{F_3}-\vec A&=\myvec{0.066-1 \\ 
        0.308+1}\\
-\implies	||\vec{AF_3}||&=\sqrt{\myvec{-0.934 &
+\implies	{AF_3}&=\sqrt{\myvec{-0.934 &
        1.308}
 	\myvec{-0.934 \\ 
        1.308}} \\
-\implies	||\vec{AF_3}||&=1.607
+\implies	{AF_3}&=1.607
 \end{align}
 
 
 
-$\therefore ||\vec{AE_3}||= ||\vec{AF_3}||=m $ verified.
+$\therefore {AE_3}= {AF_3}=m $ verified.
 
 
 \begin{align}
 	\\
-	\vec{BD_3}&=\myvec{ -3.367 +4\\ 
+	\vec{D_3}-\vec B&=\myvec{ -3.367 +4\\ 
                 -0.967 -6}\\
-\implies	||\vec{BD_3}||&=\sqrt{\myvec{ 0.633  &
+\implies	{BD_3}&=\sqrt{\myvec{ 0.633  &
        6.967}
        \myvec{ 0.633\\ 
        6.967}} \\
-\implies	||\vec{BD_3}||&=6.995 
+\implies	{BD_3}&=6.995 
 \end{align}
 
 
@@ -289,17 +289,17 @@ $\therefore ||\vec{AE_3}||= ||\vec{AF_3}||=m $ verified.
 
 
 \begin{align}
-	\vec{BF_3}&=\myvec{ 0.066+4 \\
+	\vec{F_3}-\vec B&=\myvec{ 0.066+4 \\
          0.308 -6}\\                              
-\implies	||\vec{BF_3}||&=\sqrt{\myvec{ 4.066 &
+\implies	{BF_3}&=\sqrt{\myvec{ 4.066 &
        -5.692}
        \myvec{4.066 \\ 
        -5.692}} \\
-\implies	||\vec{BF_3}||&=6.995 
+\implies	{BF_3}&=6.995 
 \end{align}           
 
 
-$\therefore ||\vec{BD_3}||= ||\vec{BF_3}||=n $ verified.
+$\therefore {BD_3}= {BF_3}=n $ verified.
 
 
 
@@ -308,13 +308,13 @@ $\therefore ||\vec{BD_3}||= ||\vec{BF_3}||=n $ verified.
 
 \begin{align}
 	\\
-	\vec{CD_3}&=\myvec{ -3.367 + 3\\
+	\vec{D_3}-\vec C&=\myvec{ -3.367 + 3\\
        -0.967 + 5}\\
-\implies	||\vec{CD_3}||&=\sqrt{\myvec{ -0.367&
+\implies	{CD_3}&=\sqrt{\myvec{ -0.367&
        4.033}
        \myvec{ -0.367\\
        4.033}} \\
-\implies	||\vec{CD_3}||&=4.0499 
+\implies	{CD_3}&=4.0499 
 \end{align}           
 
 
@@ -324,17 +324,17 @@ $\therefore ||\vec{BD_3}||= ||\vec{BF_3}||=n $ verified.
 
 
 \begin{align}
-	\vec{CE_3}&=\myvec{ -0.136 + 3\\ 
+	\vec{E_3}-\vec C&=\myvec{ -0.136 + 3\\ 
        -2.136+5}\\
-\implies	||\vec{CE_3}||&=\sqrt{\myvec{ 2.864 &
+\implies	{CE_3}&=\sqrt{\myvec{ 2.864 &
        2.864}
        \myvec{ 2.864\\ 
        2.864}}\\
-\implies	||\vec{CE_3}||&= 4.0499 
+\implies	{CE_3}&= 4.0499 
 \end{align}           
 
 
-$\therefore ||\vec{CD_3}||= ||\vec{CE_3}||=p $ verified.
+$\therefore {CD_3}= {CE_3}=p $ verified.
 
 
 
