--- a/main.tex
+++ b/main.tex
@@ -244,7 +244,7 @@ Now we have to find m,n and p.
 We can find that by using the formula for magnitude of a vector:\\ 
 {\vspace{0.4cm}}
 Magnitude of Vector
-$${AE_3=\sqrt{{(\vec{E_3}-\vec A)}^{\top}.{(\vec{E_3}-\vec A)}}$$
+$${AE_3=\sqrt{{(\vec{E_3}-\vec A)}^{\top}{(\vec{E_3}-\vec A)}}$$
 
 \begin{align}
 	\vec{E_3}-\vec A&=\myvec{-0.136-1 \\ 
@@ -253,10 +253,8 @@ $${AE_3=\sqrt{{(\vec{E_3}-\vec A)}^{\top}.{(\vec{E_3}-\vec A)}}$$
        -1.136}
        \myvec{ -1.136\\ 
        -1.136}} \\
-\implies	{AE_3}&= 1.607 
+	&= 1.607 
 \end{align}
-
-
 \begin{align}
 	\vec{F_3}-\vec A&=\myvec{0.066-1 \\ 
        0.308+1}\\
@@ -264,30 +262,18 @@ $${AE_3=\sqrt{{(\vec{E_3}-\vec A)}^{\top}.{(\vec{E_3}-\vec A)}}$$
        1.308}
 	\myvec{-0.934 \\ 
        1.308}} \\
-\implies	{AF_3}&=1.607
+	&=1.607
 \end{align}
-
-
-
 $\therefore {AE_3}= {AF_3}=m $ verified.
-
-
 \begin{align}
-	\\
 	\vec{D_3}-\vec B&=\myvec{ -3.367 +4\\ 
                 -0.967 -6}\\
 \implies	{BD_3}&=\sqrt{\myvec{ 0.633  &
        6.967}
        \myvec{ 0.633\\ 
        6.967}} \\
-\implies	{BD_3}&=6.995 
+	&=6.995 
 \end{align}
-
-
-
-
-
-
 \begin{align}
 	\vec{F_3}-\vec B&=\myvec{ 0.066+4 \\
          0.308 -6}\\                              
@@ -295,34 +281,18 @@ $\therefore {AE_3}= {AF_3}=m $ verified.
        -5.692}
        \myvec{4.066 \\ 
        -5.692}} \\
-\implies	{BF_3}&=6.995 
+	&=6.995 
 \end{align}           
-
-
 $\therefore {BD_3}= {BF_3}=n $ verified.
-
-
-
-
-
-
 \begin{align}
-	\\
 	\vec{D_3}-\vec C&=\myvec{ -3.367 + 3\\
        -0.967 + 5}\\
 \implies	{CD_3}&=\sqrt{\myvec{ -0.367&
        4.033}
        \myvec{ -0.367\\
        4.033}} \\
-\implies	{CD_3}&=4.0499 
+	&=4.0499 
 \end{align}           
-
-
-
-
-
-
-
 \begin{align}
 	\vec{E_3}-\vec C&=\myvec{ -0.136 + 3\\ 
        -2.136+5}\\
@@ -330,40 +300,9 @@ $\therefore {BD_3}= {BF_3}=n $ verified.
        2.864}
        \myvec{ 2.864\\ 
        2.864}}\\
-\implies	{CE_3}&= 4.0499 
-\end{align}           
-
-
-$\therefore {CD_3}= {CE_3}=p $ verified.
-
-
-
-
-
-
-
-%	\sqrt{{\myvec{\frac {-366\sqrt{74}-406\sqrt{122}-488\sqrt{32}}{\sqrt{74}+\sqrt{32}+\sqrt{122}}-1 &
-%	\frac {-610\sqrt{74}-170\sqrt{22}+732\sqrt{32}}{\sqrt{74}+\sqrt{32}+\sqrt{122}}+1}}
-%	\myvec{\frac {-366\sqrt{74}-406\sqrt{122}-488\sqrt{32}}{\sqrt{74}+\sqrt{32}+\sqrt{122}}-1 \\ \\
-%	\frac {-610\sqrt{74}-170\sqrt{122}+732\sqrt{32}}{\sqrt{74}+\sqrt{32}+\sqrt{122}}+1}}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	&= 4.0499            
+\end{align}
+$\therefore {CD_3}= {CE_3}=p$  verified.
 \end{document}
 
 
