--- a/main.tex
+++ b/main.tex
@@ -240,12 +240,11 @@ The coordinates of the points of contact of the circle and the triangle are:
 	{{\, \text{from} \; 1.5.9}}
   \end{align}
 
-Now we have to find m,n and p.
-We can find that by using the formula for magnitude of a vector:
+Length of line segment between two points is given by:
 
+${AE_3}=\sqrt{{(\vec{E_3}-\vec A)}^{\top}{(\vec{E_3}-\vec A)}}$
 \begin{enumerate}
-\item  ${AE_3=\sqrt{{(\vec{E_3}-\vec A)}^{\top}{(\vec{E_3}-\vec A)}}$
-\item \begin{align}
+	\item \begin{align}
 	\vec{E_3}-\vec A&=\myvec{-0.136-1 \\ 
        -2.136+1}\\
 \implies	{AE_3}&=\sqrt{\myvec{-1.136 &
@@ -254,7 +253,7 @@ We can find that by using the formula for magnitude of a vector:
        -1.136}} \\
 	&= 1.607 
 \end{align}
-\item \begin{align} 
+ \begin{align} 
 	\vec{F_3}-\vec A&=\myvec{0.066-1 \\ 
        0.308+1}\\
 \implies	{AF_3}&=\sqrt{\myvec{-0.934 &
@@ -263,7 +262,7 @@ We can find that by using the formula for magnitude of a vector:
        1.308}} \\
 	&=1.607
 \end{align}
-$\therefore {AE_3}= {AF_3}=m $ verified.
+$\therefore{AE_3}= {AF_3}=m$ verified.
 \item \begin{align}
  	\vec{D_3}-\vec B&=\myvec{ -3.367 +4\\ 
                 -0.967 -6}\\
@@ -273,7 +272,7 @@ $\therefore {AE_3}= {AF_3}=m $ verified.
        6.967}} \\
 	&=6.995 
 \end{align}
-\item \begin{align}
+\begin{align}
 	\vec{F_3}-\vec B&=\myvec{ 0.066+4 \\
          0.308 -6}\\                              
 \implies	{BF_3}&=\sqrt{\myvec{ 4.066 &
@@ -281,8 +280,8 @@ $\therefore {AE_3}= {AF_3}=m $ verified.
        \myvec{4.066 \\ 
        -5.692}} \\
 	&=6.995 
-\end{align}           
-$\therefore {BD_3}= {BF_3}=n $ verified.
+\end{align}
+$\therefore {BD_3}= {BF_3}=n$ verified.
 \item \begin{align}
 	\vec{D_3}-\vec C&=\myvec{ -3.367 + 3\\
        -0.967 + 5}\\
@@ -292,7 +291,7 @@ $\therefore {BD_3}= {BF_3}=n $ verified.
        4.033}} \\
 	&=4.0499 
 \end{align}           
-\item \begin{align}
+\begin{align}
 	\vec{E_3}-\vec C&=\myvec{ -0.136 + 3\\ 
        -2.136+5}\\
 \implies	{CE_3}&=\sqrt{\myvec{ 2.864 &
@@ -301,7 +300,7 @@ $\therefore {BD_3}= {BF_3}=n $ verified.
        2.864}}\\
 	&= 4.0499            
 \end{align}
-$\therefore {CD_3}= {CE_3}=p$  verified.
+$\therefore {CD_3}= {CE_3}=p$ verified.
 \end{enumerate}
 \end{document}
 
