--- a/main.tex
+++ b/main.tex
@@ -239,12 +239,10 @@ The coordinates of the points of contact of the circle and the triangle are:
     }
 	{{\, \text{from} \; 1.5.9}}
   \end{align}
-
 Length of line segment between two points is given by:
-
-${AE_3}=\sqrt{{(\vec{E_3}-\vec A)}^{\top}{(\vec{E_3}-\vec A)}}$
 \begin{enumerate}
 	\item \begin{align}
+	{AE_3}&=\sqrt{{(\vec{E_3}-\vec A)}^{\top}{(\vec{E_3}-\vec A)}}\\
 	\vec{E_3}-\vec A&=\myvec{-0.136-1 \\ 
        -2.136+1}\\
 \implies	{AE_3}&=\sqrt{\myvec{-1.136 &
@@ -253,7 +251,8 @@ ${AE_3}=\sqrt{{(\vec{E_3}-\vec A)}^{\top}{(\vec{E_3}-\vec A)}}$
        -1.136}} \\
 	&= 1.607 
 \end{align}
- \begin{align} 
+\begin{align}
+ 	{AF_3}&=\sqrt{{(\vec{F_3}-\vec A)}^{\top}{(\vec{F_3}-\vec A)}}\\ 
 	\vec{F_3}-\vec A&=\myvec{0.066-1 \\ 
        0.308+1}\\
 \implies	{AF_3}&=\sqrt{\myvec{-0.934 &
@@ -262,8 +261,9 @@ ${AE_3}=\sqrt{{(\vec{E_3}-\vec A)}^{\top}{(\vec{E_3}-\vec A)}}$
        1.308}} \\
 	&=1.607
 \end{align}
-$\therefore{AE_3}= {AF_3}=m$ verified.
+$\therefore{AE_3}= {AF_3}=m$ is verified.
 \item \begin{align}
+	{BD_3}&=\sqrt{{(\vec{D_3}-\vec B)}^{\top}{(\vec{D_3}-\vec B)}}\\
  	\vec{D_3}-\vec B&=\myvec{ -3.367 +4\\ 
                 -0.967 -6}\\
 \implies	{BD_3}&=\sqrt{\myvec{ 0.633  &
@@ -273,6 +273,7 @@ $\therefore{AE_3}= {AF_3}=m$ verified.
 	&=6.995 
 \end{align}
 \begin{align}
+	{BF_3}&=\sqrt{{(\vec{F_3}-\vec B)}^{\top}{(\vec{F_3}-\vec B)}}\\
 	\vec{F_3}-\vec B&=\myvec{ 0.066+4 \\
          0.308 -6}\\                              
 \implies	{BF_3}&=\sqrt{\myvec{ 4.066 &
@@ -281,8 +282,9 @@ $\therefore{AE_3}= {AF_3}=m$ verified.
        -5.692}} \\
 	&=6.995 
 \end{align}
-$\therefore {BD_3}= {BF_3}=n$ verified.
+$\therefore {BD_3}= {BF_3}=n$ is verified.
 \item \begin{align}
+	{CD_3}&=\sqrt{{(\vec{D_3}-\vec C)}^{\top}{(\vec{D_3}-\vec C)}}\\
 	\vec{D_3}-\vec C&=\myvec{ -3.367 + 3\\
        -0.967 + 5}\\
 \implies	{CD_3}&=\sqrt{\myvec{ -0.367&
@@ -292,6 +294,7 @@ $\therefore {BD_3}= {BF_3}=n$ verified.
 	&=4.0499 
 \end{align}           
 \begin{align}
+	{CE_3}&=\sqrt{{(\vec{E_3}-\vec C)}^{\top}{(\vec{E_3}-\vec C)}}\\
 	\vec{E_3}-\vec C&=\myvec{ -0.136 + 3\\ 
        -2.136+5}\\
 \implies	{CE_3}&=\sqrt{\myvec{ 2.864 &
@@ -300,7 +303,7 @@ $\therefore {BD_3}= {BF_3}=n$ verified.
        2.864}}\\
 	&= 4.0499            
 \end{align}
-$\therefore {CD_3}= {CE_3}=p$ verified.
+$\therefore {CD_3}= {CE_3}=p$ is verified.
 \end{enumerate}
 \end{document}
 
